--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 Debugger_Val="true"
-MongoDB_URL="mongodb+srv://amit:Amit%40456@cluster0.vwpsi.mongodb.net/shopping?retryWrites=true&w=majority"
+MongoDB_URL="mongodb+srv://amit:Amit%40456@cluster0.vwpsi.mongodb.net/shopping"
 MongoDB_URL1="mongodb://localhost:27017"
 ACCESS_SECRET="jdnfksdmfksd"
