--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,10 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-.env
+*.env
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
-/tmp
+tmp/
+.vscode/
+favicon.ico
