--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ Debugger_Val="true"
 MongoDB_URL="mongodb+srv://amit:Amit%40456@cluster0.vwpsi.mongodb.net/shopping"
 MongoDB_URL1="mongodb://localhost:27017"
 ACCESS_SECRET="jdnfksdmfksd"
+PRVKEY_LOC="/home/amit/projects/go/shopping/src/cert/id_rsa"
+PUBKEY_LOC="/home/amit/projects/go/shopping/src/cert/id_rsa.pub"
