--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+.env
 
 *.env
 # Dependency directories (remove the comment below to include it)
@@ -18,3 +19,6 @@
 tmp/
 .vscode/
 favicon.ico
+k8s-yaml/
+k8s-yaml/*
+src/cert/
